--- a/app/assets/stylesheets/sponge/variables.less
+++ b/app/assets/stylesheets/sponge/variables.less
@@ -17,6 +17,9 @@
 
 @wellBackground: #969696;
 
+@linkColor:             @primaryColor;
+@linkColorHover:        darken(@linkColor, 15%);
+
 @tableBorder: @grayDark;
 
 @grayBackground:                #414141;
@@ -37,3 +40,8 @@
 
 @dropdownLinkBackgroundActive:  darken(@dropdownBackground, 15%);
 @dropdownLinkBackgroundHover:   darken(@dropdownBackground, 5%);
+
+// Buttons
+// -------------------------
+@btnPrimaryBackground:              #08c;
+@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 20%);
