--- a/app/assets/stylesheets/sponge/thumbnails.less
+++ b/app/assets/stylesheets/sponge/thumbnails.less
@@ -1,3 +1,10 @@
 .thumbnail{
     #translucent > .background(@white, 0.9);
+    &.default-picture {
+        height: 165px;
+        padding: 0;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: @white;
+    }
 }
