--- a/app/assets/stylesheets/sponge/type.less
+++ b/app/assets/stylesheets/sponge/type.less
@@ -3,10 +3,6 @@ h1, h2, h3, h4, h5, h6 {
         color: @primaryColor;
         text-shadow: -1px -2px 1px rgba(0,0,0,.25);
     }
-    &.well-title{
-        padding: 10px 15px; margin: 0; margin-bottom: 15px;
-        border-bottom: 1px solid gray;
-    }
     &.no-margin{
         margin: 0;
     }
@@ -14,9 +10,21 @@ h1, h2, h3, h4, h5, h6 {
 
 .hero-unit{
     h1, h2, h3, h4, h5, h6 {
-        margin: 20px 0; padding-bottom: 10px;
-        border-bottom: 2px solid @primaryColor;
         color: @white;
         text-shadow:1px 1px 3px rgba(0,0,0,.5);
+    }
+    hr {
+        border: none; border-top: 2px solid @primaryColor;
+        &.divide{
+            margin: 0; margin-bottom: 30px;
+        }
+    }
+    .btn-toolbar {
+        &.sort-actions{
+            margin: 0; margin-top: 10px;
+        }
+    }
+    .carousel-inner {
+        overflow: none;
     }
 }
