--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
-<div class="thumbnail <%= current_cart.count_product(product.id) != '' ? 'in-cart' : '' %>">
-    <%= product_image_tag(product) %>
+<div class="thumbnail product <%= current_cart.count_product(product.id) != '' ? 'in-cart' : '' %>">
+    <%= product_thumbanil_tag(product) %>
     <% @count = current_cart.count_product(product.id) %>
     <% if @count != '' %>
     <i class="icon-shopping-cart icon-top-info">
@@ -7,9 +7,18 @@
     </i>
     <% end %>
     <div class="caption">
-      <h3><%= link_to h(product.title), product %></h3>
-      <p><%= product.description %></p>
-      <h2><%= format_price(product.price) %></h2>
-      <p><%= link_to raw('<i class="icon-shopping-cart"></i> Dodaj u korpu'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %></p>
+      <h3 class="title"><%= link_to h(product.title), product %></h3>
+      <hr/>
+      <p><% product.description %></p>
+      <h2 class="price"><%= format_price(product.price) %></h2>
+      <hr/>
+      <div class="row-fluid buttons">
+      <% if @count != '' %>
+      <p><%= link_to raw('<i class="icon-shopping-cart"></i> Dodaj jos u korpu'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-large btn-block btn-warning' %></p>
+      <% else %>
+      <p><%= link_to raw('<i class="icon-shopping-cart"></i> Dodaj u korpu'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-large btn-block btn-primary' %></p>
+      <% end %>
+      <p><%= link_to 'Opis proizvoda', product_path(product), :class => 'btn btn-large btn-block btn-info' %></p>
+      </div>
     </div>
 </div>
