--- a/app/views/store/_featured.html.erb
+++ b/app/views/store/_featured.html.erb
@@ -1,13 +1,19 @@
 <section class="products">
     <div class="row-fluid">
-        <div class="span12">
+        <div class="span4">
             <h2>
                 Izdvajamo
-                <div class="btn-group pull-right">
-                    <a class="btn btn-primary" href="#feature-products" data-slide="prev"><i class="icon-arrow-left"></i></a>
-                    <a class="btn btn-primary" href="#feature-products" data-slide="next"><i class="icon-arrow-right"></i></a>
-                </div>
             </h2>
+        </div>
+        <div class="span8">
+          <div class="btn-group pull-right">
+            <a class="btn btn-primary" href="#feature-products" data-slide="prev"><i class="icon-arrow-left"></i></a>
+            <a class="btn btn-primary" href="#feature-products" data-slide="next"><i class="icon-arrow-right"></i></a>
+          </div>
+        </div>
+    </div>
+    <hr class="divide"/>
+    <div class="row-fluid">
             <div id="feature-products" class="carousel slide">
                 <div class="carousel-inner">
                     <% @index = 0 %>
