--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -4,4 +4,9 @@
 *= require admin/jquery.fileupload-ui
 *= require admin/bootstrap-image-gallery
 *= require admin/bootstrap-editable
+*= require admin/bootstrap-notify
+*= require admin/alerts/alert-bangtidy
+*= require admin/alerts/alert-blackgloss
+*= require admin/alerts/alert-notification-animations
+*= require admin/admin-custom
 */
