--- a/app/views/admin/pictures/index.html.erb
+++ b/app/views/admin/pictures/index.html.erb
@@ -1,61 +1,24 @@
 <div id="pictures-listing">
-<h1>Listing pictures</h1>
 
+    <div id="pictures">
+        <%= render 'admin/pictures/pictures' %>
+    </div>
 
-    <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Image</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody id="gallery"  data-toggle="modal-gallery" data-target="#modal-gallery">
-        <% if !@pictures.nil? %>
-            <% @pictures.each do |picture| %>
-              <tr>
-                <td>
-                  <%= link_to picture.name ||= '', '#', :class => 'editable',
-                        :data => {
-                            :resource => 'picture', :name => 'name', :type => 'text', :url => admin_picture_path(picture), :pk => picture.id,
-                            :'original-title' => 'Edit Name', :emptytext => 'Add Picture Name'
-                        }
-                  %>
-                </td>
-                <td>
-                  <a href="<%= picture.image_url %>" title="<%= picture.name %>" data-gallery="gallery" >
-                    <%= image_tag(picture.image_url(:thumb)) %>
-                  </a>
-                </td>
-                <td><%= link_to 'Default', admin_product_path(@product), :class => 'set-default', :data => { :resource => 'product', :name => 'default_picture_id', :value => picture.id } %>
-                  <%= link_to 'Edit', edit_admin_picture_path(picture) %>
-                  <%= link_to 'Destroy', admin_picture_path(picture),
-                    method: :delete, remote: true, data: { confirm: 'Are you sure?' } %>
-                </td>
-              </tr>
-            <% end %>
-        <% else %>
-          <tr>
-            <td colspan="3">No Pictures added for this product</td>
-          </tr>
-        <% end %>
-        </tbody>
-    </table>
-
-
-
-
-<br />
-
-<div id="modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-</div>
+    <div id="modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    </div>
 
 <script type="text/javascript">
     $('.editable').editable();
 
     $('.set-default').on('click', function(e){
         e.preventDefault();
+
+        var $this = $(this);
+
+        if($this.hasClass('disabled')) return false;
+
         var url = $(this).attr('href');
+
 
         var resource = $(this).data('resource');
         var name = $(this).data('name');
@@ -75,7 +38,19 @@
             dataType: "json",
             data: params,
             success: function(data){
-                alert('Success!')
+                $('.top-right').notify({
+                    message: { text: 'Picture updated.' },
+                    type: 'blackgloss'
+                }).show();
+
+                $this.parents('ul:first').find('li').each(
+                    function(){
+                        $(this).removeClass('default');
+                    }
+                ).find('.set-default').removeClass('disabled');
+
+                $this.addClass('disabled');
+                $this.parents('li:first').addClass('default');
             }
         });
 
