--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -78,6 +78,12 @@
 </div>
 
 <div class="container">
+
+  <div class='notifications top-right'></div>
+  <div class='notifications bottom-right'></div>
+  <div class='notifications top-left'></div>
+  <div class='notifications bottom-left'></div>
+
   <div class="row">
     <div class="span3 bs-docs-sidebar">
     <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="100">
