--- a/app/assets/stylesheets/sponge/type.less
+++ b/app/assets/stylesheets/sponge/type.less
@@ -25,6 +25,8 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
     .carousel-inner {
-        overflow: none;
+        .item {
+            margin-top: 10px;
+        }
     }
 }
