--- a/app/assets/stylesheets/sponge/thumbnails.less
+++ b/app/assets/stylesheets/sponge/thumbnails.less
@@ -1,3 +1,11 @@
+.thumbails {
+	ul {
+		li {
+			margin-bottom: 0;
+		}
+	}
+}
+
 .thumbnail{
     #translucent > .background(@white, 0.9);
     &.default-picture {
