--- a/app/assets/stylesheets/sponge/type.less
+++ b/app/assets/stylesheets/sponge/type.less
@@ -9,10 +9,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero-unit{
+    color: @white;
+    text-shadow:1px 1px 3px rgba(0,0,0,.5);    
     h1, h2, h3, h4, h5, h6 {
-        color: @white;
         text-shadow:1px 1px 3px rgba(0,0,0,.5);
     }
+   
     hr {
         border: none; border-top: 2px solid @primaryColor;
         &.divide{
