--- a/app/assets/stylesheets/sponge/variables.less
+++ b/app/assets/stylesheets/sponge/variables.less
@@ -17,7 +17,7 @@
 
 @wellBackground: #969696;
 
-@linkColor:             @primaryColor;
+@linkColor:             lighten(@white, 25%);
 @linkColorHover:        darken(@linkColor, 15%);
 
 @tableBorder: @grayDark;
