--- a/app/assets/stylesheets/sponge/thumbnails.less
+++ b/app/assets/stylesheets/sponge/thumbnails.less
@@ -1,9 +1,11 @@
-.thumbails {
-	ul {
-		li {
-			margin-bottom: 0;
-		}
-	}
+ul.thumbnails {
+    margin-bottom: 30px;
+    &:last-child {
+        margin-bottom: 0;
+    }
+    li {
+      margin-bottom: 0;
+    }
 }
 
 .thumbnail{
