--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= line_item.product.title %></td>
+  <td><%= shorty(line_item.product.title, 30) %></td>
   <td><%= format_price(line_item.product.price) %></td>
   <td>
     <div class="btn-group no-margin-top">
