--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -98,7 +98,7 @@
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%= current_user.name %>
                             <b class="caret"></b></a>
                           <ul class="dropdown-menu">
-                            <li><%= link_to "Edit Profile", edit_admin_user_path(current_user) %></li>
+                            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
                             <li><%= link_to "Authentication", authentications_path %></li>
                             <li><a href="#">Something else here</a></li>
                             <li class="divider"></li>
