--- a/app/assets/stylesheets/sponge/type.less
+++ b/app/assets/stylesheets/sponge/type.less
@@ -10,7 +10,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .hero-unit{
     color: @white;
-    text-shadow:1px 1px 3px rgba(0,0,0,.5);    
+    text-shadow:1px 1px 3px rgba(0,0,0,.5);
+    font-size: @baseFontSize;
+
     h1, h2, h3, h4, h5, h6 {
         text-shadow:1px 1px 3px rgba(0,0,0,.5);
     }
@@ -38,5 +40,32 @@ h1, h2, h3, h4, h5, h6 {
     }
     .pagination {
         margin: 0;
+    }
+
+    .info-box(@color: @primaryColor, @alpha: 0.65){
+        .border-radius(10px);
+        .box-shadow(inset 0 0 3px rgba(0,0,0,.25));
+        #translucent > .background(@color, @alpha);
+    }
+
+    form {
+        margin-bottom: 0;
+        #error_explanation {
+            .info-box(@errorText, 0.65);
+            padding: 20px; margin-bottom: 20px;
+        }
+        .controls {
+            span {
+                color: @white;
+            }
+        }
+        .form-actions {
+            border-top: none;
+            margin: 0; margin-top: 10px;
+            .info-box();
+        }
+        .field_with_errors {
+            display: initial;
+        }
     }
 }
