--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Oauth" %></title>
+    <title><%= content_for?(:title) ? "svezacipele :: " + yield(:title) : "svezacipele" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -95,12 +95,11 @@
                     </li>
                     <% if user_signed_in? %>
                         <li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%= current_user.name %>
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %>
                             <b class="caret"></b></a>
                           <ul class="dropdown-menu">
-                            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-                            <li><%= link_to "Authentication", authentications_path %></li>
-                            <li><a href="#">Something else here</a></li>
+                            <li><%= link_to "Naruceno", orders_path %></li>
+                            <li><%= link_to "Moji podaci", edit_user_registration_path %></li>
                             <li class="divider"></li>
                             <li><%= link_to "Sing out", destroy_user_session_path %></li>
                           </ul>
