--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= shorty(line_item.product.title, 30) %></td>
-  <td><%= format_price(line_item.product.price) %></td>
+  <td style="text-align: right"><%= format_price(line_item.product.price) %></td>
   <td>
     <div class="btn-group no-margin-top">
       <%= link_to raw('<i class="icon-minus"></i>'), line_items_path(product_id: line_item.product, remove: true), :action => :remove, :method => :post, remote: true, :class => 'btn btn-small btn-primary' %>
