--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,58 +1,33 @@
 <%- model_class = Order -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+  <h2><%=t 'order.title', :default => model_class.model_name.human.pluralize %></h2>
 </div>
-<table class="table table-striped">
+<table class="table">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
-      <th><%= model_class.human_attribute_name(:first_name) %></th>
-      <th><%= model_class.human_attribute_name(:last_name) %></th>
-      <th><%= model_class.human_attribute_name(:email) %></th>
-      <th><%= model_class.human_attribute_name(:phone_number) %></th>
-      <th><%= model_class.human_attribute_name(:phone_number2) %></th>
-      <th><%= model_class.human_attribute_name(:delivery_address) %></th>
-      <th><%= model_class.human_attribute_name(:delivery_city) %></th>
-      <th><%= model_class.human_attribute_name(:delivery_zip_code) %></th>
+      <th>Narucio</th>
+      <th>Kontakt telefon</th>
+      <th>Isporuka na adresu</th>
       <th><%= model_class.human_attribute_name(:status) %></th>
-      <th><%= model_class.human_attribute_name(:comment) %></th>
-      <th><%= model_class.human_attribute_name(:position) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>Cena</th>
+      <th>Datum narucivanja</th>
+      <th>&nbsp;</th>
     </tr>
   </thead>
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= link_to order.id, order_path(order) %></td>
-        <td><%= order.user_id %></td>
-        <td><%= order.first_name %></td>
-        <td><%= order.last_name %></td>
-        <td><%= order.email %></td>
+        <!--<td><%= link_to order.id, order_path(order) %></td>-->
+        <td><%= order.first_name %> <%= order.last_name %></td>
         <td><%= order.phone_number %></td>
-        <td><%= order.phone_number2 %></td>
-        <td><%= order.delivery_address %></td>
-        <td><%= order.delivery_city %></td>
-        <td><%= order.delivery_zip_code %></td>
+        <td><%= order.delivery_address %>, <%= order.delivery_city %>, <%= order.delivery_zip_code %></td>
         <td><%= order.status %></td>
-        <td><%= order.comment %></td>
-        <td><%= order.position %></td>
-        <td><%=l order.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_order_path(order), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      order_path(order),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
+        <td><%= format_price(order.total_price) %></td>
+        <td><%= order.created_at.strftime("%d/%m/%Y") %></td>
+        <td style="text-align: right">
+          <%= link_to 'Detaljno', order_path(order), :class => 'btn btn-info' %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_order_path,
-            :class => 'btn btn-primary' %>
