--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -202,6 +202,8 @@
         <div id="push"></div>
     </div><!--/#wrap -->
 
+    <%= render :partial => 'modal-gallery' %>
+
 
 
     <div id="footer">
