--- a/app/assets/stylesheets/sponge/type.less
+++ b/app/assets/stylesheets/sponge/type.less
@@ -53,17 +53,22 @@ h1, h2, h3, h4, h5, h6 {
         margin: 0;
     }
 
-    .info-box(@color: @primaryColor, @alpha: 0.65){
-        .border-radius(10px);
+    .info-box(@color: @primaryColor, @alpha: 0.65, @radius: 10px){
+        .border-radius(@radius);
         .box-shadow(inset 0 0 3px rgba(0,0,0,.25));
         #translucent > .background(@color, @alpha);
+    }
+
+    .form-actions {
+        border-top: none;
+        margin: 0; margin-top: 20px;
+        .info-box(gray, 0.5);
     }
 
     .product-title-icon {
         float: right;
         i {
             position: relative;
-            font-size: 1.5em;
             span {
                 position: absolute;
                 top: 0px; right: -10px;
@@ -77,7 +82,49 @@ h1, h2, h3, h4, h5, h6 {
             margin-top: 10px;
         }
         &.slide {
-            margin-bottom: 20px;
+//            margin-bottom: 20px;
+
+        }
+    }
+
+    #product-show {
+        .description {
+            margin-top: 10px; margin-bottom: 20px;
+            padding: 20px;
+            .info-box(white, 0.5, 5px);
+            color: #000000;
+        }
+        .price {
+            padding: 20px;
+            text-align: center;
+            .info-box();
+        }
+        .form-actions {
+            margin-top: 20px;
+        }
+    }
+
+    #product-pictures-slider {
+        .carousel-control{
+            &.left {
+                z-index: 1;
+                left: -22px;
+                top: 80px;
+                visibility: hidden;
+            }
+            &.right {
+                z-index: 1;
+                right: -22px;
+                top: 80px;
+                visibility: hidden;
+            }
+        }
+        &:hover {
+            .carousel-control{
+                &.left, &.right {
+                    visibility: visible;
+                }
+            }
         }
     }
 
@@ -102,10 +149,6 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 
-    .form-actions {
-        border-top: none;
-        margin: 0; margin-top: 10px;
-        .info-box(gray, 0.5);
-    }
+
     
 }
